# RenderingFramework3D

./: CMakeLists.txt  LICENSE  README.md
defaultshaders/: lit.frag  lit.vert  litfrag.spv  litvert.spv  unlit.frag  unlit.vert  unlitfrag.spv  unlitvert.spv
include/: camera.h  matrix.h  mesh.h  renderer.h  timeprofiler.h  types.h  vec.h  window.h  worldobj.h
src/api/: camera.cpp  mesh.cpp  renderer.cpp  window.cpp  worldobj.cpp
src/backend/: mesh_internal.cpp  mesh_internal.h  renderer_internal.cpp  renderer_internal.h  wnd_internal.cpp  wnd_internal.h  worldobj_internal.cpp  worldobj_internal.h
src/common/: types_internal.h  util.cpp  util.h
src/core/: default_shaders.h  devicemgr.cpp  devicemgr.h  pipeline.cpp  pipeline.h  swpchain.cpp  swpchain.h  ubomgr.cpp  ubomgr.h
test/basetest/: test_scene.cpp
test/custompipelinetest/: test_scene.cpp
test/custompipelinetest/shaders/: compile_shaders.bat  lightfrag.spv  lightshader.frag  lightshader.vert  lightvert.spv  objfrag.spv  objshader.frag  objvert.spv
test/dynmeshtest/: test_scene.cpp
test/eulertest/: test_scene.cpp
